fixup! Notes de réunion brutes

--- a/2020/2020-11-23_PV_CA.md
+++ b/2020/2020-11-23_PV_CA.md
@@ -73,6 +73,7 @@ Montant des cotisations défini en AG et non en réunion CA (transparence)
 -> faire des dons à des services libres qu'on utilise, asso qu'on soutient ? (Linux, Django, PSF, helloasso, april, ...) -> à proposer à la communauté, en ayant vu combien d'argent on voudrait donner (excédant par rapport au besoin et aux réserves raisonnables pour faire des événements en 2021)
 -> entwanne crée un sujet sur le forum asso pour proposer de faire des dons à des projets/assos
 https://media.discordapp.net/attachments/780482593677246515/780510824225439764/Capture_decran_de_2020-11-23_20-11-04.png?width=717&height=89
+-> payer les réseaux sociaux pour faire de la comm ZdS ?
 
 Accès au compte en banque : seul firm1 a accès, avec les identifiants du précédent trésorier
 -> documents à signer pour changer l'attribution, à remplir par président & trésorier
