--- a/2022/2022-01-24_PV_CA.md
+++ b/2022/2022-01-24_PV_CA.md
@@ -104,7 +104,7 @@ On ne pourra pas déclencher un nouveau projet sur le budget en milieu d'année 
 
 Second point : relance de Gandi sur le financement de 50% des coûts du serveur de production.
 
-Il y avait eu une période de plusieurs années sans financement et Gandi avait donc décidé d'offrir à 100%, mais c'est revenu à 50% depuis juin 2021.
+Au départ Gandi nous offrait 50% des frais du serveur de production puis il y a eu une période de plusieurs années sans financement et Gandi a donc décidé d'offrir à 100%, mais c'est depuis juin 2021 nous ne recevons plus aucun financement.
 
 Gandi sont toujours intéressés par les actions menées par l'asso sur lesquelles ils pourraient communiquer. firm1 s'occupait jusque là de la relation avec Gandi (point d'activité régulier + demande de budget) en tant que trésorier, mais voudrait bien passer la main (pour quelqu'un de la comm').
 
@@ -227,7 +227,7 @@ L'idée initiale serait de commencer "low-tech" avec 4-5 streams et commencer à
 
 firm1 : peut-être voir pour un financement participatif par la communauté pour ces actions ?
 
-Situohen : OK pour commencer sans investir d'argent et voir si ça prend, puis orienter un petit budget pour les micros car c'est le point le plus important. Si besoin de plus de financement ok pour un financement participatif pour ne pas augmenter les cotisations de l'asso.
+Situphen : OK pour commencer sans investir d'argent et voir si ça prend, puis orienter un petit budget pour les micros car c'est le point le plus important. Si besoin de plus de financement ok pour un financement participatif pour ne pas augmenter les cotisations de l'asso.
 
 Amaury : si financement participatif ce serait pour à terme avoir notre propre matériel et ne plus avoir de frais.
 
@@ -235,7 +235,7 @@ sgble : la référence micro essayée coûte aux alentours de 600€ à l'achat
 
 
 
-Actuellement ~25 abonnés sur la chaîne twitch sans ne jamais avoir rien streamé. En en parlant dans différents réseaux ayant un pied dans ce milieu (pogsciences, deuchnord, chabrette, melcore) il y aurait moyen de toucher du monde.
+Actuellement ~25 abonnés sur la chaîne twitch sans ne jamais avoir rien streamé. En en parlant dans différents réseaux ayant un pied dans ce milieu (pogscience, deuchnord, chabrette, melcore) il y aurait moyen de toucher du monde.
 
 
 
@@ -301,7 +301,7 @@ Idée adoptée à l'unanimité (7 voix pour, 0 contre, 0 blancs).
 
 On a un serveur de prod, de bêta, serveur matomo, accès hébergeur, adresse mail, droit super-admin sur le site, etc. sans règles spécifiques sur ce qui donne ces accès à qui.
 
-Situphen a rédigé un message où il essayer d'inscrire les règles pour décider de comment sont déterminés les accès.
+Situphen a rédigé un message où il essaie d'inscrire les règles pour décider de comment sont déterminés les accès.
 
 
 
@@ -309,15 +309,15 @@ Il faudrait faire en sorte que plus d'une personne ait chaque accès, et que les
 
 Il suffirait d'avoir l'avis de 2 personnes du CA pour autoriser un nouvel accès.
 
-Une liste serait maintenue pour savoir qui a accès à quoi : [https://zestedesavoir.com/forums/sujet/14012/qui-a-acces-a-quoi/](https://zestedesavoir.com/forums/sujet/14012/qui-a-acces-a-quoi/)
+Une liste est déjà maintenue pour savoir qui a accès à quoi : [https://zestedesavoir.com/forums/sujet/14012/qui-a-acces-a-quoi/](https://zestedesavoir.com/forums/sujet/14012/qui-a-acces-a-quoi/)
 
 
 
-vhf (inactif) a toujours accès au serveur de prod via l'utilisateur Munin car c'est on utilise son serveur Munin pour surveiller l'état du serveur
+vhf (inactif) a toujours accès au serveur de prod via l'utilisateur Munin car on utilise son serveur Munin pour surveiller l'état du serveur
 
 Sandhose (inactif) a toujours accès car il y a des sauvegardes régulières du site vers un de ses serveurs, (non testées et non chiffrées) mais Situphen aimerait que ce sujet soit repris. D'autres sauvegardes régulières sur 2 mois sont déjà gérées par l'équipe technique et testées (utilisées pour déployer le serveur bêta).
 
-Moté se propose de nous prêter un espace de stockage pour des sauvegardes (et remplacer donc le serveur de Sandhose)
+Moté se propose de nous prêter un espace de stockage pour des sauvegardes (et remplacer donc le serveur de Sandhose).
 
 
 
