Correction de la date d'AG 2022

--- a/2022/2022-05-08_PV_AGO.md
+++ b/2022/2022-05-08_PV_AGO.md
@@ -1,6 +1,6 @@
 # Assemblée générale Zeste de Savoir 08/05/2022
 
-Le 8 avril 2022 à 14h, les membres de l’association Zeste de Savoir se sont réunis en Assemblée Générale ordinaire (AGO) sur une visioconférence jitsi.
+Le 8 mai 2022 à 14h, les membres de l’association Zeste de Savoir se sont réunis en Assemblée Générale ordinaire (AGO) sur une visioconférence jitsi.
 
 Étaient présent·e·s :
 
