--- a/2023/2023-11-25_PV_AGE.md
+++ b/2023/2023-11-25_PV_AGE.md
@@ -80,6 +80,6 @@ Il y a actuellement des discussions quant à la participation de l'association a
 Il informe aussi de la décision de Jean de quitter le conseil d'administration (au mois d'octobre dernier).
 
 Willy précise que la demande pour la reconnaissance d'intérêt générale est en pause en attendant la régularisation suite au dépôt du PV de l'AG en préfecture, et donc l'issue de cette AGE.
-Il ajoute que la réécriture de la page association sur le site a avancé.
+Antoine Claisse et Amaury ajoutent que la réécriture de la page association sur le site a avancé.
 
 La séance se termine à 14h27.
