--- a/2024/2024-04-06_PV_AGO.md
+++ b/2024/2024-04-06_PV_AGO.md
@@ -103,7 +103,7 @@ Alban indique que les comptes-rendus des réunions techniques (où ces différen
 
 ---
 
-Concernant l'activité de l'association en 2023, il est rappelé qu'une assemblée générale extraordinaire (AGE) a eu lieu le 25 novembre 2023 pour expliciter les statuts quant au siège de l'association, qui est maintennt domiciliée à Levallois-Perret (92), afin de régulariser notre situation.
+Concernant l'activité de l'association en 2023, il est rappelé qu'une assemblée générale extraordinaire (AGE) a eu lieu le 25 novembre 2023 pour expliciter les statuts quant au siège de l'association, qui est maintenant domiciliée à Levallois-Perret (92), afin de régulariser notre situation.
 Quentin demande si ce nouveau siège correspond toujours à l'adresse d'un membre de l'association, Amaury confirme qu'il s'agit de son adresse.
 
 Les membres de l'association sont aussi informés que celle-ci a été reconnue d'intérêt général le 12 janvier 2024 et que cela est applicable à partir de 2023.
@@ -131,7 +131,7 @@ Amaury présente aux membres de l'association son bilan moral.
 Il réaffirme la vision de Zeste de Savoir : depuis la dernière AGO principalement et de manière générale sur cette période les choses ont bien fonctionné (recentrage des activités, recherche de visibilité).
 Cela nous amène du succès et trouve de l'intérêt auprès du public pour ce qu'on propose.  
 Il y a cependant des choses qui fonctionnent moins bien comme l'organisation du CA qui n'est pas efficace et doit être retravaillée ou la participation à des événements extérieurs qui n'a jamais aussi peu intéressé.
-Amaury se désole du fait que l'association ne participera pas aux JDLL organisées sur le thème de l'éductation cette année, par absence de membre volontaire.
+Amaury se désole du fait que l'association ne participera pas aux JDLL organisées sur le thème de l'éducation cette année, par absence de membre volontaire.
 
 Il confirme que de bonnes directions sont prises dans la valorisation de nos contenus, mais qu'on dispose d'une grosse bibliothèque qu'on a du mal à mettre en avant en dehors des grosses références (C, C++, Arduino, réseaux, Python).
 Il serait pour lui dommage de nous enfermer dans notre bulle et il espérerait qu'il y ait plus de 2 à 4 personnes qui s'occupent de tout (il regrette un faible engagement bénévole des membres).
@@ -141,7 +141,7 @@ Nous sommes de mieux en mieux reconnus dans le milieu de la communication scient
 Des perspectives intéressantes se présentent à nous : nous sommes toujours régulièrement invités à des événements et beaucoup de gens dans le milieu ont déjà entendu parler de Zeste de Savoir.
 
 François demande si le manque de participation aux événements pourrait venir du fait que les JDLL ont lieu à Lyon et d'autres événements ailleurs en France alors que le cœur de l'association serait à Paris.
-Amaury indique qu'il n'y a pas de participation non plus aux événements parisiens (festival *Double•Science* par exemple dont l'appel à participation est toujours ouvert) et que nous sommes devenus plus souples sur le remboursement des frais liés aux déplacemments pour représenter l'association (on défraie assez mal mais on le fait mieux qu'avant).
+Amaury indique qu'il n'y a pas de participation non plus aux événements parisiens (festival *Double•Science* par exemple dont l'appel à participation est toujours ouvert) et que nous sommes devenus plus souples sur le remboursement des frais liés aux déplacements pour représenter l'association (on défraie assez mal mais on le fait mieux qu'avant).
 
 Thimotée ajoute que selon lui le problème est lié au fait qu'il n'y a aucun renouvellement des bénévoles et qu'il suffit de regarder les membres participant à l'AGO qui ne sont que des anciens.
 Amaury confirme le problème du renouvellement et le manque de diversité dans l'association.
@@ -158,10 +158,10 @@ Celui-ci est approuvé avec 14 voix pour et 3 votes blancs.
 
 Jérôme pose une nouvelle question suite au vote sur la manière dont on pourrait tenir les membres informés des événements auxquels on aimerait que l'association participe.
 Il précise ne pas avoir le réflexe d'aller sur le forum et se demande si une newsletter ou un flux RSS pourraient aider.  
-Amaury confirme qu'il n'y a pas de newletter en place mais que l'on pourrait utiliser un sujet unique du forum pour y publier les annonces et que les membres pourraient s'abonner par email à ce sujet afin d'en recevoir les nouveautés.  
+Amaury confirme qu'il n'y a pas de newsletter en place mais que l'on pourrait utiliser un sujet unique du forum pour y publier les annonces et que les membres pourraient s'abonner par email à ce sujet afin d'en recevoir les nouveautés.  
 Jérôme se demande alors s'il faut dans ce cas limiter les personnes pouvant poster dans ce sujet pour éviter des notifications intempestives mais Amaury lui répond que la communauté est assez disciplinée là-dessus (il est lui-même abonné au sujet JZdS Paris et ne subit pas de notifications intempestives).
 
-Thimotée ajoute qu'il est aussi possible de s'abonner au forum Association pour recevoir des notifications / emails lors de la création de nouveaux sujets mais Amaury signale qu'il y a une tendance à réutiliser les sujets des événements existant plutot qu'à en créer de nouveaux.
+Thimotée ajoute qu'il est aussi possible de s'abonner au forum Association pour recevoir des notifications / emails lors de la création de nouveaux sujets mais Amaury signale qu'il y a une tendance à réutiliser les sujets des événements existant plutôt qu'à en créer de nouveaux.
 
 ## 3. Bilan financier du trésorier
 
@@ -171,7 +171,7 @@ Les recettes de 2022 (1250€) étaient plus importantes que celles de 2023 (900
 On constate donc moins de dons (95€) en 2023 mais plus de cotisations (85€) : cela est dû à l'assemblée générale extraordinaire de novembre de 2023 qui a « forcé » les membres à réadhérer plus vite pour la campagne 2023-2024.
 Les adhésions en 2023 sont cependant restées stables par rapport à 2022 : 23 adhésions sur la campagne 2022-2023 contre 25 sur 2023-2024.
 
-Les dépenses de 2023 (590,77€) ont été légérement supérieures à celles de 2022 (572,79€).
+Les dépenses de 2023 (590,77€) ont été légèrement supérieures à celles de 2022 (572,79€).
 Le plus gros poste de dépenses concerne la location de serveurs (484,41€) suivi des cotisations auprès des banques / assurances (78,96€) et des relations extérieures (30€ d'adhésion au Café des sciences).
 
 Les dépenses des serveurs se répartissent entre Gandi (165,27€), Scaleway (279,54€), PulseHeberg (18€) et Infomaniak (21,60€).  
@@ -207,7 +207,7 @@ Willy informe que le budget est prévu de façon à ce que le solde couvre toujo
 Alban ajoute  que le solde actuel permettrait en réalité de tenir plus que ça, probablement deux ans.
 Willy précise que l'association a cependant toujours besoin d'adhésions pour assurer son bon fonctionnement à long terme.
 
-Arnaud demande alors si les dons en nature (serveurs Gandi) apparaîssent dans certains budgets ou dans les bilans.
+Arnaud demande alors si les dons en nature (serveurs Gandi) apparaissent dans certains budgets ou dans les bilans.
 Willy répond qu'ils sont dans les bilans complets mais pas dans la présentation.
 François conseille de faire apparaître ces dons directement dans les bilans.
 
@@ -324,7 +324,7 @@ Les décisions sont soumises au vote à 16h45 et acceptées à l'unanimité (15 
 
 ## 7. Organisation interne de l’association et participation des membres du CA
 
-Amaury partage une impression récurrente que peu de personnes font toutes les tâches dans l'association et se demande comment on peut motivier d'autres personnes et partager plus équitablement les tâches.
+Amaury partage une impression récurrente que peu de personnes font toutes les tâches dans l'association et se demande comment on peut motiver d'autres personnes et partager plus équitablement les tâches.
 L'engagement au CA vient normalement avec une volonté de participation mais il y a pourtant des gens au CA qui ne participent pas, se pose alors la question de comment faire mieux.
 
 Il rappelle qu'il avait été décidé l'an dernier de mettre en place des réunions semi-régulières du CA pour tenter d'améliorer les choses mais que seulement deux réunions ont eu lieu (11 septembre et 3 décembre).
@@ -400,7 +400,7 @@ Aucun vote individuel n'est demandé, il est donc procédé à un vote sur l'ens
 
 Cette composition est soumise au vote à 17h11 et acceptée à l'unanimité avec 15 voix.
 
-La domicialiation de l'association restera chez Amaury quelle que soit l'issue de la première réunion du CA qui décidera des rôles du bureau.
+La domiciliation de l'association restera chez Amaury quelle que soit l'issue de la première réunion du CA qui décidera des rôles du bureau.
 
 ## 10. Questions diverses
 
@@ -409,7 +409,7 @@ La domicialiation de l'association restera chez Amaury quelle que soit l'issue d
 Un débat rapide a eu lieu sur le forum concernant le fait de passer les adhésions en année civile, sans qu'aucun consensus n'ait émergé.
 
 Amaury indique que cela simplifierait la gestion administrative car une personne serait alors adhérente pour l'année.
-Étienne note que ravancer l'AGO plus tôt dans l'année (février) aurait le même effet en obligeant les membres à recotiser plus tôt (en janvier).
+Étienne note qu'avancer l'AGO plus tôt dans l'année (février) aurait le même effet en obligeant les membres à recotiser plus tôt (en janvier).
 
 Florent demande qui seraient les membres votant à l'AGO 2025 si elle a lieu en début d'année.
 Amaury répond qu'il s'agirait des membres ayant cotisé en 2025.
@@ -431,7 +431,7 @@ L'équipe est communication est actuellement au point mort et ne peut pas repose
 
 Alban trouve qu'il est délicat de parler de ce sujet en AG sans que l'équipe de communication ne soit présente et se demande si l'équipe est à jour ou s'il y a un appel à candidature en cours.
 Étienne précise que l'équipe est officiellement composée de 5 personnes (elyppire, ache, Melcore, Amaury, Moté) selon <https://zestedesavoir.com/membres/casquettes/4/>.  
-Amaury ajoute qu'il n'y a globalment pas d'actifs réels dans l'équipe.
+Amaury ajoute qu'il n'y a globalement pas d'actifs réels dans l'équipe.
 
 Willy remet sur la table le sujet de l'utilisation d'outils automatiques pour gérer notre communication sur les réseaux sociaux.
 De tels outils avaient été refusés car l'on voulait faire des posts personnalisés mais force est de constater qu'on n'arrive pas à le faire.
