Corrections orthographiques supplémentaires

--- a/2024/2024-04-06_PV_AGO.md
+++ b/2024/2024-04-06_PV_AGO.md
@@ -18,7 +18,7 @@ Le 6 avril 2024 à 14h30, les membres de l’association Zeste de Savoir se sont
 * David Roux (Fumble) ;
 * Arnaud Dusch (Aabu) ;
 * François Colin (SpaceFox) — parti à 17h22 ;
-* Thimotée Barral (Moté) — parti à 15h55 ;
+* Timothée Barral (Moté) — parti à 15h55 ;
 * Quentin Dauprat (Heziode) — parti à 15h55 ;
 * L. Calamia (sgble) — non membre.
 
@@ -85,13 +85,13 @@ L'équipe n'a par exemple reçu aucune contribution extérieure lors de la parti
 Il y a globalement un manque de moyens humains pour mettre en œuvre les nouvelles fonctionnalités qui sont attendues par la communauté.  
 Les membres de l'équipe technique se réunissent régulièrement (tous les 2-3 mois) pour faire avancer les sujets.
 
-Plusieurs versions du site auront été déployées sur l'années 2023.
-Un projet étudiant avait accompagné l'équipe technique sur l'année scolaire 2022-2023 : tout le travail accompli n'a pas encore été intégré au pojet (certaines révisions sont toujours en discussion).
+Plusieurs versions du site auront été déployées sur l'année 2023.
+Un projet étudiant avait accompagné l'équipe technique sur l'année scolaire 2022-2023 : tout le travail accompli n'a pas encore été intégré au projet (certaines révisions sont toujours en discussion).
 Philippe (enseignant dans l'université de Bordeaux) envisage de renouveler un tel projet pour l'année scolaire 2024-2025.
 
-De gros chantiers ont eu lieu concernant le déménagement de nos hébergements : le serveur de bêta a été migré de Scaleway vers PulseHeberg, et le serveur d'emals de Gandi vers Informaniak.
+De gros chantiers ont eu lieu concernant le déménagement de nos hébergements : le serveur de bêta a été migré de Scaleway vers PulseHeberg, et le serveur d'emails de Gandi vers Infomaniak.
 Les serveurs ont été mis à jour vers Debian 12, Munin (outil de supervision) est maintenant administré directement par l'équipe.
-Les sauvegardes du site sont faites sur le serveur de bêta ainsi que chez des membres de l'association (Philippe et Thimotée), sauvegardes bien évidemment chiffrées et les scripts de restauration sont testés régulièrement.
+Les sauvegardes du site sont faites sur le serveur de bêta ainsi que chez des membres de l'association (Philippe et Timothée), sauvegardes bien évidemment chiffrées et les scripts de restauration sont testés régulièrement.
 Des alertes sont émises en cas d'échec de sauvegarde.
 
 Florent demande quelles sont les fonctionnalités nouvelles qui paraissent essentielles ou très intéressantes et qu'il faudrait voir mises en œuvre. Il précise qu'il faudrait peut-être publier en tribune un appel à volontaires sur des sujets concrets.
@@ -99,7 +99,7 @@ Philippe évoque le système de quiz dans les contenus qui est un sujet attendu,
 Arnaud indique qu'une réforme de l'organisation des contenus est en cours (un gros projet entamé il y a 2-3 ans qui transforme le système de validation en supprimant la distinction entre types de contenus) mais avance par morceaux, ainsi que des travaux préparatifs sur un meilleur éditeur de contenus (l'éditeur actuel étant fonctionnel mais pas très intuitif) et plus globalement un redesign du site.  
 Amaury ajoute l'idée des claps (« applaudissements ») pour féliciter les contenus / remercier leurs auteurs, qui serait un petit projet à mettre en place.
 
-Alban indique que les comptes-rendus des réunions techniques (où ces différents projets sont évoqués) sont publiés sur le forum et Amaury précise que les réunions en elle-mêmes sont ouvertes à toutes et tous et annoncées sur ce même forum.
+Alban indique que les comptes-rendus des réunions techniques (où ces différents projets sont évoqués) sont publiés sur le forum et Amaury précise que les réunions en elles-mêmes sont ouvertes à toutes et tous et annoncées sur ce même forum.
 
 ---
 
@@ -143,10 +143,10 @@ Des perspectives intéressantes se présentent à nous : nous sommes toujours r
 François demande si le manque de participation aux événements pourrait venir du fait que les JDLL ont lieu à Lyon et d'autres événements ailleurs en France alors que le cœur de l'association serait à Paris.
 Amaury indique qu'il n'y a pas de participation non plus aux événements parisiens (festival *Double•Science* par exemple dont l'appel à participation est toujours ouvert) et que nous sommes devenus plus souples sur le remboursement des frais liés aux déplacements pour représenter l'association (on défraie assez mal mais on le fait mieux qu'avant).
 
-Thimotée ajoute que selon lui le problème est lié au fait qu'il n'y a aucun renouvellement des bénévoles et qu'il suffit de regarder les membres participant à l'AGO qui ne sont que des anciens.
+Timothée ajoute que selon lui le problème est lié au fait qu'il n'y a aucun renouvellement des bénévoles et qu'il suffit de regarder les membres participant à l'AGO qui ne sont que des anciens.
 Amaury confirme le problème du renouvellement et le manque de diversité dans l'association.
 
-Alban précise qu'il y a moins de parisiens qu'avant dans l'association et que c'est d'une certaine manière handicapant pour certains événéments (toute la France est assez facilement accessible en train depuis Paris, c'est moins le cas ailleurs).
+Alban précise qu'il y a moins de parisiens qu'avant dans l'association et que c'est d'une certaine manière handicapant pour certains événements (toute la France est assez facilement accessible en train depuis Paris, c'est moins le cas ailleurs).
 Il ajoute que le statut d'intérêt général pourra améliorer les défraiements car les déplacements pourront être considérés comme des dons en nature et donc être défiscalisés.
 Amaury signale que Paris reste cependant la ville où le plus de JZdS (*Journées Zeste de Savoir*, rencontres informelles entre membres) sont organisées mais qu'elles attirent de moins en moins de monde, et plus ou moins toujours les mêmes personnes.
 
@@ -161,7 +161,7 @@ Il précise ne pas avoir le réflexe d'aller sur le forum et se demande si une n
 Amaury confirme qu'il n'y a pas de newsletter en place mais que l'on pourrait utiliser un sujet unique du forum pour y publier les annonces et que les membres pourraient s'abonner par email à ce sujet afin d'en recevoir les nouveautés.  
 Jérôme se demande alors s'il faut dans ce cas limiter les personnes pouvant poster dans ce sujet pour éviter des notifications intempestives mais Amaury lui répond que la communauté est assez disciplinée là-dessus (il est lui-même abonné au sujet JZdS Paris et ne subit pas de notifications intempestives).
 
-Thimotée ajoute qu'il est aussi possible de s'abonner au forum Association pour recevoir des notifications / emails lors de la création de nouveaux sujets mais Amaury signale qu'il y a une tendance à réutiliser les sujets des événements existant plutôt qu'à en créer de nouveaux.
+Timothée ajoute qu'il est aussi possible de s'abonner au forum Association pour recevoir des notifications / emails lors de la création de nouveaux sujets mais Amaury signale qu'il y a une tendance à réutiliser les sujets des événements existant plutôt qu'à en créer de nouveaux.
 
 ## 3. Bilan financier du trésorier
 
@@ -308,7 +308,7 @@ Antoine C déclare qu'il serait intéressant d'avoir une équipe dédiée à la 
 
 Amaury se demande si rechercher des auteurs externes n'est pas nous faire plus plaisir qu'à eux.
 Florent répond que oui car cela nous apporterait de la diversité et des contenus de qualité sur d'autres sujets, mais que l'on peut aussi être un vecteur pour faire découvrir le travail de ces auteurs.  
-Antoince C ajoute que même s'il s'agit d'auteurs externes il n'est pas forcément question de contenus externes existants.
+Antoine C ajoute que même s'il s'agit d'auteurs externes il n'est pas forcément question de contenus externes existants.
 Il peut s'agir de personnes qui n'auraient pas pensé à rédiger sur leur domaine d'expertise et à qui l'on donne cette opportunité en leur proposant une plateforme avec de la visibilité.  
 Justin demande une réflexion sur comment on se positionne par rapport à d'autres plateformes de contenus en ligne.
 
@@ -420,7 +420,7 @@ Amaury précise que c'est notre mode de fonctionnement actuel.
 Willy ajoute que les week-ends de début d'année sont souvent bien chargés avec les vacances scolaires entre autres et qu'il serait alors difficile de trouver une date pour l'AGO.
 Antoine R déclare que le problème des vacances scolaires est le même au printemps et que les week-ends n'y sont pas moins chargés.
 
-David conclut en disant que l'association fonctionne bien depuis 10 avec ce décalage.
+David conclut en disant que l'association fonctionne bien depuis 10 ans avec ce décalage.
 
 Un vote est mis en place à 17h28 pour valider l'absence de décision sur ce sujet.
 C'est approuvé avec 13 voix pour et 1 vote blanc.
@@ -440,7 +440,7 @@ Amaury lui répond que l'équipe utilise actuellement Publer pour simplifier une
 
 Alban rappelle qu'il s'agit d'un problème humain et non technique.
 Il préconise de faire le ménage dans l'équipe et d'instaurer un système de réunions régulières où les décisions de communication seraient prises.
-Ce rôle pourrait être attribué à Thimotée si cela lui convient.  
+Ce rôle pourrait être attribué à Timothée si cela lui convient.  
 Il indique enfin que le CA pourrait relancer un appel à volontaires pour la communication.
 
 Cette proposition est votée à 17h39 et approuvée avec 13 voix pour et 1 vote blanc.
