--- a/2024/2024-04-06_PV_AGO.md
+++ b/2024/2024-04-06_PV_AGO.md
@@ -87,7 +87,7 @@ Les membres de l'équipe technique se réunissent régulièrement (tous les 2-3 
 
 Plusieurs versions du site auront été déployées sur l'année 2023.
 Un projet étudiant avait accompagné l'équipe technique sur l'année scolaire 2022-2023 : tout le travail accompli n'a pas encore été intégré au projet (certaines révisions sont toujours en discussion).
-Philippe (enseignant dans l'université de Bordeaux) envisage de renouveler un tel projet pour l'année scolaire 2024-2025.
+Philippe (enseignant à l'université de Bordeaux) envisage de renouveler un tel projet pour l'année scolaire 2024-2025.
 
 De gros chantiers ont eu lieu concernant le déménagement de nos hébergements : le serveur de bêta a été migré de Scaleway vers PulseHeberg, et le serveur d'emails de Gandi vers Infomaniak.
 Les serveurs ont été mis à jour vers Debian 12, Munin (outil de supervision) est maintenant administré directement par l'équipe.
@@ -281,14 +281,15 @@ Il ajoute qu'un groupe de travail a déjà eu lieu sur le sujet qui donnait les 
 Là encore c'est un sujet à discuter en dehors de l'AGO.
 
 Amaury conclut en disant que l'équipe technique prend ce point à cœur pour sa prochaine réunion, de même pour la prochaine réunion de la communication, et que cela doit aussi faire partie du groupe de travail lancé par Étienne.
-Alban se propose de lancer le sujet sur le forum pour la partie technique.
+Alban se propose de lancer le sujet sur le forum Staff pour l’obsolescence des contenus.
 
 Les résolutions sont soumises au vote à 16h23 et adoptées avec 12 voix pour et 3 votes blancs.
 
 ## 6. Recherche d’auteurs et autrices externes
 
-Au cours de l'AGO de juin 2023, il avait été approuvé de rechercher des auteurs externes à ZdS qui seraient enclins à publier leurs écrit sur le site.  
+Au cours de l'AGO de juin 2023, il avait été approuvé de rechercher des auteurs externes à ZdS qui seraient enclins à publier leurs écrits sur le site.  
 Depuis, les activités suivantes ont été entreprises:
+
 - Un brouillon de communication type a été écrit ;
 - Un débat sur la valeur ajoutée de ZdS s'est passé sur le forum.
 
@@ -375,7 +376,7 @@ Le budget 2024 est donc soumis au vote à 17h01 et accepté avec 13 voix pour et
 
 Il est procédé au renouvellement des membres du conseil d'administration (CA) de l'association.
 
-Pour référence, sont au moment de l'AGO membres du CA: 
+Pour référence, sont au moment de l'AGO membres du CA :
 * Amaury Carrade — président ;
 * Willy Konguem Mbouguen — trésorier ;
 * Antoine Rozo — secrétaire ;
